syntax = "proto3";

package com.chat.commons.obj.proto;

option java_outer_classname = "LoginReqProto";

message LoginReq {

  string userName = 1;
  
  string password = 2;

}

// protoc -I=Z:\workspace\code\Java\learn\chat\chat-commons-object\src\main\resources\proto --java_out=Z:\workspace\code\Java\learn\chat\chat-commons-object\src\main\java\    Z:\workspace\code\Java\learn\chat\chat-commons-object\src\main\resources\proto\*.proto